[package]
name        = "libshaiya"
version     = "0.0.1"
description = "A library for interacting with Shaiya binary files."
repository  = "https://github.com/OpenShaiya/libshaiya/"
readme      = "README.md"
authors     = ["Triston Plummer"]
edition     = "2018"

[dependencies]
anyhow      = "1.0"
byteorder   = "1.4"
num         = "0.4"